// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Thread item in the channel list Threads Component should match snapshot 1`] = `
<View
  accessibilityState={
    {
      "busy": undefined,
      "checked": undefined,
      "disabled": undefined,
      "expanded": undefined,
      "selected": undefined,
    }
  }
  accessibilityValue={
    {
      "max": undefined,
      "min": undefined,
      "now": undefined,
      "text": undefined,
    }
  }
  accessible={true}
  collapsable={false}
  focusable={true}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    {
      "opacity": 1,
    }
  }
  testID="channel_list.threads.button"
>
  <View
    style={
      [
        {
          "alignItems": "center",
          "flexDirection": "row",
        },
        false,
        undefined,
        undefined,
        {
          "minHeight": 40,
        },
      ]
    }
  >
    <Icon
      name="message-text-outline"
      style={
        [
          {
            "color": "rgba(255,255,255,0.5)",
            "fontSize": 24,
            "marginRight": 12,
          },
          false,
          undefined,
        ]
      }
    />
    <Text
      style={
        [
          {
            "flex": 1,
          },
          {
            "fontFamily": "OpenSans",
            "fontSize": 16,
            "fontWeight": "400",
            "lineHeight": 24,
          },
          {
            "color": "rgba(255,255,255,0.72)",
          },
          false,
          undefined,
          undefined,
        ]
      }
    >
      Threads
    </Text>
  </View>
</View>
`;

exports[`Thread item in the channel list Threads Component should match snapshot with onCenterBg 1`] = `
<View
  accessibilityState={
    {
      "busy": undefined,
      "checked": undefined,
      "disabled": undefined,
      "expanded": undefined,
      "selected": undefined,
    }
  }
  accessibilityValue={
    {
      "max": undefined,
      "min": undefined,
      "now": undefined,
      "text": undefined,
    }
  }
  accessible={true}
  collapsable={false}
  focusable={true}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    {
      "opacity": 1,
    }
  }
  testID="channel_list.threads.button"
>
  <View
    style={
      [
        {
          "alignItems": "center",
          "flexDirection": "row",
        },
        false,
        undefined,
        undefined,
        {
          "minHeight": 40,
        },
      ]
    }
  >
    <Icon
      name="message-text-outline"
      style={
        [
          {
            "color": "rgba(255,255,255,0.5)",
            "fontSize": 24,
            "marginRight": 12,
          },
          false,
          {
            "color": "rgba(63,67,80,0.72)",
          },
        ]
      }
    />
    <Text
      style={
        [
          {
            "flex": 1,
          },
          {
            "fontFamily": "OpenSans",
            "fontSize": 16,
            "fontWeight": "400",
            "lineHeight": 24,
          },
          {
            "color": "rgba(255,255,255,0.72)",
          },
          false,
          undefined,
          {
            "color": "#3f4350",
          },
        ]
      }
    >
      Threads
    </Text>
  </View>
</View>
`;
